--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="./img/icon.png" />
 
     <link
       rel="stylesheet"
@@ -17,18 +17,20 @@
       src="https://kit.fontawesome.com/45758e0c8b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./stylesheet.css" />
+    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="stylesheet" href="./css/dark.css">
     <title>Bankist</title>
   </head>
   <body>
-    <div class="container">
+    <div class="styling">
+   <div class="container ">
       <header>
         <div class="row">
           <div class="col-5">
             <p class="welcome">Log in to get started</p>
           </div>
           <div class="col-2">
-            <img src="logo.png" alt="Logo" class="logo" />
+            <img src="./img/logo.png" alt="Logo" class="logo" />
           </div>
 
           <!-- <div class="col-1 hamsburger">
@@ -51,7 +53,12 @@
                </div>
   
                <div class="col-sm-3 gen__style">
-                <p>Dark</p>
+                <!-- <p>Dark</p> -->
+                <div class="positioning" id="toggler">
+                  <span class="icon__dark"> <i class="fa-solid fa-moon"></i></span>
+                  <span class="theme">Dark </span>
+                  </div>
+            
                </div>
   
 
@@ -290,8 +297,10 @@
              with id:GO, feel free to send out of your token 😊🤗</p>           
         </footer>
     </div>
+  </div>
 
     <!-- External script -->
-    <script src="./Bankist.js"></script>
+    <script src="js/Bankist.js"></script>
+    <script src="js/dark.js"></script>
   </body>
 </html>
