--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                 <div class="col-sm-10">
                   <input
-                    type="text"
+                    type="number"
                     placeholder="A maximum of 4 characters"
                     maxlength="4"
                     class="login__input  input__space input__signUp"
@@ -116,7 +116,7 @@
 
                 <div class="col-sm-10">
                   <input
-                    type="text"
+                    type="number"
                     placeholder="verify password"
                     maxlength="4"
                     class="login__input  input__space input__verifysignUp"
@@ -159,7 +159,7 @@
 
                 <div class="col-sm-11">
                   <input
-                    type="text"
+                    type="number"
                     placeholder="pin"
                     maxlength="4"
                     class="login__input login__input--pin input__space" 
